connect app with redux-saga
- add auth logic
- add redux-saga
- create axios instance
- get user info

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,10 @@ code {
 
 a:hover {
   text-decoration: none;
+  color: #000000;
+  transition: 0.6s all;
+}
+
+.color_navbar {
+  background-color: #663399;
 }
